[project]
name = "ecobalyse"
version = "0.1.0"
description = "Accélerer la mise en place de l'affichage environnemental"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "litestar[jwt,sqlalchemy,standard]>=2.21.1",
    "aiosqlite>=0.21.0",
    "advanced-alchemy>=1.4.4",
    "msgspec>=0.19.0",
    "check-jsonschema>=0.37.2",
    "pytest-databases[postgres]>=0.18.0",
    "psycopg[binary,pool]>=3.3.4",
    "asyncpg>=0.30.0",
    "structlog>=25.2.0",
    "orjson>=3.11.9",
    "aiosmtplib>=5.1.2",
    "emails>=0.6",
    "python-stdnum>=2.1",
    "pygithub>=2.6.1",
    "typer>=0.25.1",
    "pytest-mock>=3.14.1",
    "asyncstdlib>=3.13.1",
    "sentry-sdk[litestar]>=2.62.0",
    "pwdlib[argon2]>=0.3.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "setuptools"]

[tool.hatch.metadata]
# direct dependency references, e.g `pip @ git+https://github.com/pypa/pip.git@master`
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["./packages/python/ecobalyse", "./backend/src", "."]
ignore-vcs = true
sources = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [".github", "docs"]
include = ["src/*", "tests/*", "public/*", "tools/*", "resources", "LICENSE"]
skip-excluded-dirs = false

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
backend = "app.__main__:run_cli"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.3.4",
    "ruff~=0.15",
]

data = [
     "boto3~=1.43",
     "dynaconf~=3.3",
     "frozendict ~= 2.4",
     "orjson ~= 3.10",
     "platformdirs ~= 4.5",
     "rich ~= 14.2",
     "typer ~= 0.15",

     # Brightway
     "bw2analyzer == 0.11.7",
     "bw2calc == 2.0.1",
     "bw2data == 4.4.3",
     "bw2io[multifunctional] == 0.9.5",
     "bw2parameters == 1.1.0",
     'pypardiso ~= 0.4; platform_machine!="arm64" and platform_machine!="aarch64"',
 ]

dev-data = [
    "check-jsonschema ~= 0.35",
    "deadcode ~= 2.4",
    "pre-commit ~= 4.0",
    "pytest ~= 8.3",
    "pytest-mock ~= 3.14",
    "ruff ~= 0.8",
    "vulture ~= 2.14",
]
jupyter = [
    "ipywidgets>=8.1.5",
    "jupyter-collaboration>=3.0.1",
    "jupyterlab>=4.6.0",
    "notebook>=7.3.0",
]
# SimaPro (API + plotting)
simapro = ["fastapi[all] ~= 0.115", "matplotlib~=3.11.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
